# sky-birds-game

./: .gitignore  CMakeLists.txt  Common.h  main.cpp
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.md  task.md
.github/workflows/: open-ai-pr-reviewer.yaml  thank-you-for-create-pull-request.yaml
src/Base/: Base.cpp  Base.h
src/alien/: Alien.cpp  Alien.h
src/bullet/: Bullet.cpp  Bullet.h
src/common/: Common.cpp  Common.h
src/dark/: Dark.cpp  Dark.h
src/enemy/: Enemy.cpp  Enemy.h
src/explosion/: Explosion.cpp  Explosion.h
src/horn/: Horn.cpp  Horn.h
src/player/: Player.cpp  Player.h
src/sound_effect/: SoundEffect.cpp  SoundEffect.h
